--- a/public/components/landing/landing.html
+++ b/public/components/landing/landing.html
@@ -28,13 +28,13 @@
 
   <div class="starter-template">
     <h1>Welcome to BrewTracker</h1>
-    <p class="lead">You can track the recipies for past brews as well as access tools and calulators.<br>Here are some features we are hoping to include:<br>
+    <p class="lead">You can track the recipies for past brews as well as access tools and calculators.<br>Here are some features we are hoping to include:<br>
       <ul>
-        <li>Share brew recipies with your friends</li>
-        <li>Export reciepies into a simple text format</li>
+        <li>Share brew recipes with your friends</li>
+        <li>Export recipes into a simple text format</li>
         <li>Have countdown timers and alarms</li>
-        <li>Save all your recipies in a single place</li>
-        <li>Search over previous recipies so you can brew them again</li>
+        <li>Save all your recipes in a single place</li>
+        <li>Search over previous recipes so you can brew them again</li>
       </ul>
     </p>
   </div>
