--- a/public/components/landing/landing.html
+++ b/public/components/landing/landing.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand" href="#">BrewTracker</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
@@ -16,7 +16,7 @@
         <!-- <li><a href="#contact">Contact</a></li> -->
       </ul>
     </div><!--/.nav-collapse -->
-<!--     <div id="loginin" data-ng-controller="LoginCtrl as login">
+<!--     <div id="login" data-ng-controller="LoginCtrl as login">
       <input>
       <input>
       <button>
