--- a/public/components/landing/landing.html
+++ b/public/components/landing/landing.html
@@ -1,28 +1,37 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<!--<nav class="navbar navbar-inverse navbar-fixed-top">-->
+  <!--<div class="container">-->
+    <!--<div class="navbar-header">-->
+      <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">-->
+        <!--<span class="sr-only">Toggle navigation</span>-->
+        <!--<span class="icon-bar"></span>-->
+        <!--<span class="icon-bar"></span>-->
+        <!--<span class="icon-bar"></span>-->
+      <!--</button>-->
+      <!--<a class="navbar-brand" href="#">BrewTracker</a>-->
+    <!--</div>-->
+    <!--<div id="navbar" class="collapse navbar-collapse">-->
+      <!--<ul class="nav navbar-nav">-->
+        <!--<li class="active"><a href="#">Home</a></li>-->
+        <!--<li><a href="/about">About</a></li>-->
+        <!--&lt;!&ndash; <li><a href="#contact">Contact</a></li> &ndash;&gt;-->
+      <!--</ul>-->
+    <!--</div>&lt;!&ndash;/.nav-collapse &ndash;&gt;-->
+<!--&lt;!&ndash;     <div id="login" data-ng-controller="LoginCtrl as login">-->
+      <!--<input>-->
+      <!--<input>-->
+      <!--<button>-->
+    <!--</div> &ndash;&gt;-->
+  <!--</div>-->
+<!--</nav>-->
+
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
   <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">BrewTracker</a>
-    </div>
-    <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <!-- <li><a href="#contact">Contact</a></li> -->
-      </ul>
-    </div><!--/.nav-collapse -->
-<!--     <div id="login" data-ng-controller="LoginCtrl as login">
-      <input>
-      <input>
-      <button>
-    </div> -->
+    <h1>Track your Brewing!</h1>
+    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+    <p><a class="btn btn-primary btn-lg" href="#/about" role="button">Learn more &raquo;</a></p>
   </div>
-</nav>
+</div>
 
 <div class="container">
 
