--- a/public/components/menu/menu.html
+++ b/public/components/menu/menu.html
@@ -7,19 +7,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand" href="#/">BrewTracker</a>
     </div>
-    <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <!-- <li><a href="#contact">Contact</a></li> -->
-      </ul>
-    </div><!--/.nav-collapse -->
-<!--     <div id="loginin" data-ng-controller="LoginCtrl as login">
-      <input>
-      <input>
-      <button>
-    </div> -->
+    <div id="navbar" class="navbar-collapse collapse">
+      <form class="navbar-form navbar-right">
+        <div class="form-group">
+          <input type="text" placeholder="Email" class="form-control">
+        </div>
+        <div class="form-group">
+          <input type="password" placeholder="Password" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-success">Sign in</button>
+      </form>
+    </div><!--/.navbar-collapse -->
   </div>
 </nav>
