added some calculator descriptions I want

--- a/public/components/landing/landing.html
+++ b/public/components/landing/landing.html
@@ -44,6 +44,13 @@
         <li>Have countdown timers and alarms</li>
         <li>Save all your recipes in a single place</li>
         <li>Search over previous recipes so you can brew them again</li>
+        <li>Simple brew day calculators including:
+          <ul>
+            <li>Mash in temperature based on grain volume and temp</li>
+            <li>Target SG based for high gravity boils and additional liquid</li>
+            <li>Mash efficiency</li>
+          </ul>
+        </li>
       </ul>
     </p>
   </div>
