added new button and href help me fix

--- a/public/components/menu/menu.html
+++ b/public/components/menu/menu.html
@@ -8,6 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#/">BrewTracker</a>
+      <a class="navbar-brand" href="/public/fragments/calculators.html">Calculators</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <form class="navbar-form navbar-right">
