--- a/public/components/menu/menu.html
+++ b/public/components/menu/menu.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#/">BrewTracker</a>
-      <a class="navbar-brand" href="/public/fragments/calculators.html">Calculators</a>
+      <a class="navbar-brand" href="#/calculators">Calculators</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <form class="navbar-form navbar-right">
