--- a/public/components/calculators/Calculators.html
+++ b/public/components/calculators/Calculators.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div>
     <h1>This will be my calculators page</h1>
     <div class="container" data-ng-app="Calculators">
         <h2>Efficiency Calculator</h2>
@@ -15,5 +9,4 @@
 
         <p>Your Efficiency is {{((BMA * PPG / batch)/1000 - target) *100 }}</p>
     </div>
-</body>
-</html>
+</div>
