--- a/public/fragments/Calculators.html
+++ b/public/fragments/Calculators.html
@@ -1,27 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div class="container-fluid" data-ng-app="Calculators" data-ng-controller="efficiency">
     <h1 style="text-align:center">This will be my calculators page</h1>
-    <div class="container-fluid" data-ng-app="Calculators" data-ng-controller="efficiency">
-        <div>
-            <div class="row">
-                <div class="col-mid-12"><h2>Efficiency Calculator</h2></div>
-            </div>
-            <div class="row">
-                <div class="col-sm-3"><p>Base Malt Amount: <input type="number" ng-model="BMA"></p></div>
-                <div class="col-sm-3"><p>Estimated Points per Pound per Gallon: <input type="number" ng-model="PPG"></p></div>
-                <div class="col-sm-3"><p>Batch Size: <input type="number" ng-model="batch"> </p></div>
-            </div>
-            <div class="row">
-                <div class="col-sm-3">Gravity = {{gravity()}}</div>
-            </div>
+    <div>
+        <div class="row">
+            <div class="col-mid-12"><h2>Efficiency Calculator</h2></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3"><p>Base Malt : <input type="number" data-ng-model="BMA"></p></div>
+            <!-- TODO: some sort of hover help and unit toggle -->
+            <div class="col-sm-3"><p>Estimated Points per Pound per Gallon: <input type="number" data-ng-model="PPG"></p></div>
+            <div class="col-sm-3"><p>Batch Size: <input type="number" data-ng-model="batch"> </p></div>
+        </div>
+        <div class="row">
+            <p>{{pants}}</p><p>{{1 + 3}}</p>
+            <div class="col-sm-3">Gravity = {{gravity()}}</div>
         </div>
     </div>
-
-
-</body>
-</html>
+</div>
