--- a/public/components/landing/landing.html
+++ b/public/components/landing/landing.html
@@ -11,9 +11,10 @@
         <form data-ng-controller="RegistrationCtrl as Registration" data-ng-submit="Registration.register()">
           <input type="text" class="form-control" placeholder="First Name" data-ng-model="Registration.firstName">
           <input type="text" class="form-control" placeholder="Last Name" data-ng-model="Registration.lastName">
-          <input type="text" class="form-control" placeholder="Email Address" data-ng-model="Registration.email">
-          <input type="text" class="form-control" placeholder="Password" data-ng-model="Registration.password">
+          <input type="email" class="form-control" placeholder="Email Address" data-ng-model="Registration.email">
+          <input type="password" class="form-control" placeholder="Password" data-ng-model="Registration.password">
           <input class="btn btn-primary btn-md form-control" type="submit" value="Register">
+          <span>{{Registration.registered}}</span>
         </form>
       </div>
     </div>
