mapped creds to db table and added todo list

--- a/public/fragments/about.html
+++ b/public/fragments/about.html
@@ -1,6 +1,19 @@
 <div class="jumbotron">
     <div class="container">
-        <h1>Luke is a poopy-head!</h1>
+        <h1>This is where we keep the development TODO list...</h1>
+        <p>Scala Code</p>
+        <ul>
+            <li>index for email column of brewer table</li>
+            <li>unique check for email column</li>
+            <li>common error handling for controllers</li>
+            <li>hash password on save</li>
+            <li>log in and create session!!!</li>
+        </ul>
+        <p>Angular Code</p>
+        <ul>
+            <li>Pretty form validation for registration</li>
+            <li>Clean up calculator page</li>
+        </ul>
         <p>This is text that Luke can change when he finds where it is and turn this page into a shiny new awesome 'about' page :)</p>
     </div>
 </div>
